<resources>
    <string name="app_name">StockMarketShowdown</string>
    <string name="title_home">Home</string>
    <string name="title_company">Company</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="scott_steiner">Scott Steiner</string>
    <string name="about">About</string>
<!--    <string name="scott_steiner_math">You know they say that all men are created equal, but you look at me and you look at Samoa Joe and you can see that statement is not true. See, normally if you go one on one with another wrestler, you got a 50/50 chance of winning. But I\'m a genetic freak and I\'m not normal! So you got a 25%, AT BEST, at beat me. Then you add Kurt Angle to the mix, your chances of winning drastic go down. See the 3 way at Sacrifice, you got a 33 1/3 chance of winning, but I, I got a 66 and 2/3 chance of winning, because Kurt Angle KNOWS he can\'t beat me and he\'s not even gonna try!-->
<!--So Samoa Joe, you take your 33 1/3 chance, minus my 25% chance and you got an 8 1/3 chance of winning at Sacrifice. But then you take my 75% chance of winning, if we was to go one on one, and then add 66 2/3 per cents, I got 141 2/3 chance of winning at Sacrifice. See Joe, the numbers don't lie, and they spell disaster for you at Sacrifice.</string>-->
    <string name="tagline">Tagline</string>
    <string name="i_m_not_only_a_man_i_m_a_genetic_freak">I\'m not only a man, I\'m a Genetic Freak!</string>
    <string name="user_information">User Information</string>
    <string name="username">Username</string>
    <string name="geneticfreak">GeneticFreak</string>
    <string name="email">Email</string>
    <string name="fake_example_com">fake@example.com</string>
    <string name="net_worth">Net Worth</string>
    <string name="_410_000_000">$410,000,000</string>
    <string name="sign_out">Sign Out</string>
    <string name="click_to_upload_url">Click to upload url</string>
</resources>