<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.stockmarketshowdown.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.stockmarketshowdown.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_companyPageFragment"
            app:destination="@id/companyPageFragment" >
            <argument
                android:name="companyIndex"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.stockmarketshowdown.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.stockmarketshowdown.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/companyPageFragment"
        android:name="com.example.stockmarketshowdown.ui.dashboard.CompanyPageFragment"
        android:label="Company Page"
        tools:layout="@layout/fragment_companypage" >
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.stockmarketshowdown.ui.history.HistoryFragment"
        android:label="History"
        tools:layout="@layout/fragment_history"/>

    <fragment
        android:id="@+id/navigation_leaderboard"
        android:name="com.example.stockmarketshowdown.ui.leaderboard.LeaderboardFragment"
        android:label="Leaderboard"
        tools:layout="@layout/fragment_leaderboard"/>
</navigation>
