<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            >
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:padding="15dp"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:id="@+id/profileImage"
                        android:src="@drawable/ic_profile_default"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:id="@+id/displayName"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:id="@+id/editDisplayName"
                            android:visibility="gone"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="Edit"
                        android:id="@+id/editButton"
                        android:layout_gravity="center_horizontal"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="Exit"
                            android:visibility="gone"
                            android:id="@+id/exitButton"
                            android:layout_marginEnd="5dp"
                            android:layout_gravity="center_horizontal"
                            />
                        <Button
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:visibility="gone"
                            android:layout_marginStart="5dp"
                            android:id="@+id/saveButton"
                            android:text="Save"
                            android:layout_gravity="center_horizontal"
                            />
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/net_worth"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:id="@+id/netWorth"
                            android:textColor="@color/black"
                            android:text=""
                            android:textSize="18sp"
                            android:textStyle="italic"
                            android:layout_alignParentStart="true"/>
                    </RelativeLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/tagline"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:textColor="@color/black"
                            android:id="@+id/tagline"
                            android:text=""
                            android:textSize="15sp"
                            android:textStyle="italic"
                            android:layout_alignParentStart="true"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:visibility="gone"
                            android:textColor="@color/black"
                            android:id="@+id/editTagline"
                            android:text=""
                            android:textSize="15sp"
                            android:textStyle="italic"
                            android:layout_alignParentStart="true"/>

                    </RelativeLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/about"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:id="@+id/biography"
                            android:textColor="@color/black"
                            android:text=""
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:visibility="gone"
                            android:id="@+id/editBiography"
                            android:textColor="@color/black"
                            android:text=""
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"/>

                    </RelativeLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

<!--            User Information-->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/user_information"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/email"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#6E6C6C"
                            android:text=""
                            android:id="@+id/email"
                            android:textSize="15sp"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/username"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#6E6C6C"
                            android:text=""
                            android:id="@+id/username"
                            android:textSize="15sp"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"/>
                    </RelativeLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
</ScrollView>
